package zeldiablo.gameLaby.laby;

public interface Case{

    public void interagir(Labyrinthe l, Entite e);

}