package zeldiablo.gameLaby.laby;

public class CasePiegee implements Case{

    public void interagir(Labyrinthe l, Entite e){
        e.subirDegats(1);
    }

}
